--- a/lamp.yaml
+++ b/lamp.yaml
@@ -126,7 +126,7 @@ resources:
       flavor: { get_param: flavor}
       networks:
         - port: { get_resource: server_port }
-      block_device_mapping_v2:
+      block_device_mapping:
         - device_name: vda
           volume_id: { get_resource: bootable_volume }
           delete_on_termination: True
