--- a/none.yaml
+++ b/none.yaml
@@ -100,9 +100,22 @@ resources:
       user_data: |
         #!/bin/bash -v
         sudo -i
-        export http_proxy=http://10.144.106.132:8678
-        export https_proxy=http://10.144.106.132:8678
-        apt-get update -y
+        export https_proxy=http://10.157.240.254:8678
+        export http_proxy=http://10.157.240.254:8678
+        hostname localhost
+        echo  > /etc/apt/sources.list
+        cat >/etc/apt/sources.list <<EOL
+        ###### Ubuntu Main Repos
+        deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
+        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
+
+        ###### Ubuntu Update Repos
+        deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
+        deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse 
+        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
+        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse  
+        EOL
+
 
   server_floating_ip:
     type: OS::Nova::FloatingIP
