--- a/lamp.yaml
+++ b/lamp.yaml
@@ -115,18 +115,18 @@ resources:
         export http_proxy=http://10.157.240.254:8678
         hostname localhost
         echo  > /etc/apt/sources.list
-        cat >/etc/apt/sources.list <<EOL
-        ###### Ubuntu Main Repos
-        deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
-        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse 
-
-        ###### Ubuntu Update Repos
-        deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
-        deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse 
-        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse 
-        deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse  
-        EOL
         
+        echo ###### Ubuntu Main Repos > /etc/apt/sources.list
+        echo deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse  > /etc/apt/sources.list
+        echo deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse > /etc/apt/sources.list
+
+        echo ###### Ubuntu Update Repos > /etc/apt/sources.list
+        echo deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse > /etc/apt/sources.list
+        echo deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse 
+        echo deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse > /etc/apt/sources.list
+        echo deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse  > /etc/apt/sources.list
+        
+
         apt-get update -y
         debconf-set-selections <<< "mysql-server mysql-server/root_password password 'root'"
         debconf-set-selections <<< "mysql-server mysql-server/root_password_again password 'root'"
