--- a/none.yaml
+++ b/none.yaml
@@ -99,10 +99,10 @@ resources:
 
       user_data: |
         #!/bin/bash -v
+        sudo hostname localhost
         sudo -i
         export https_proxy=http://10.157.240.254:8678
         export http_proxy=http://10.157.240.254:8678
-        hostname localhost
         echo  > /etc/apt/sources.list
         cat >/etc/apt/sources.list <<EOL
         ###### Ubuntu Main Repos
