--- a/lamp.yaml
+++ b/lamp.yaml
@@ -110,10 +110,8 @@ resources:
 
       user_data: |
         #!/bin/bash -v
-        hostname localhost
+        sudo hostname localhost
         sudo -i
-        export https_proxy=http://10.157.240.254:8678
-        export http_proxy=http://10.157.240.254:8678
         echo  > /etc/apt/sources.list
         echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
         echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
