--- a/lamp.yaml
+++ b/lamp.yaml
@@ -114,6 +114,15 @@ resources:
         sudo -i
         export http_proxy=http://10.144.106.132:8678
         export https_proxy=http://10.144.106.132:8678
+        echo  > /etc/apt/sources.list
+        echo "###### Ubuntu Main Repos" >> /etc/apt/sources.list
+        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse"  >> /etc/apt/sources.list
+        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial main restricted universe multiverse" >> /etc/apt/sources.list
+        echo "###### Ubuntu Update Repos" >> /etc/apt/sources.list
+        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+        echo "deb http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list
+        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
+        echo "deb-src http://in.archive.ubuntu.com/ubuntu/ xenial-updates main restricted universe multiverse"  >> /etc/apt/sources.list
         apt-get update -y
         debconf-set-selections <<< "mysql-server mysql-server/root_password password 'root'"
         debconf-set-selections <<< "mysql-server mysql-server/root_password_again password 'root'"
