--- a/mean.yaml
+++ b/mean.yaml
@@ -129,6 +129,8 @@ resources:
         apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv EA312927
         echo "deb http://repo.mongodb.org/apt/ubuntu trusty/mongodb-org/3.2 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.2.list
         apt-get update -y
+        mkdir /data/db
+        chmod -R 777 /data/db
         apt-get install -y mongodb-org
         curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
         apt-get install -y nodejs
