--- a/mean.yaml
+++ b/mean.yaml
@@ -128,8 +128,10 @@ resources:
         apt-get install git -y
         apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
         echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu xenial/mongodb-org/4.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.0.list
+        apt-get install apt-transport-https
         apt-get update -y
         apt-get install -y mongodb-org
+        service mongod start
         curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
         apt-get install -y nodejs
         apt-get install -y build-essential
