--- a/mean.yaml
+++ b/mean.yaml
@@ -24,6 +24,10 @@ parameters:
     type: string
     default: nova
 
+  vmAvailabilityZone:
+    type: string
+    default: JMNG-PE3-NONPROD  
+
   internalNet:
     type: string
     description: internal network name
@@ -96,9 +100,10 @@ resources:
         - { get_resource: security_group }
 
 
-  lamp_server:
+  server:
     type: OS::Nova::Server
     properties:
+      availability_zone: { get_param: vmAvailabilityZone }
       key_name: { get_param: key }
       flavor: { get_param: flavor}
       networks:
@@ -152,7 +157,7 @@ resources:
     type: OS::Nova::FloatingIPAssociation
     properties:
       floating_ip: { get_resource: server_floating_ip}
-      server_id: { get_resource: lamp_server}
+      server_id: { get_resource: server}
 
   bootable_volume:
     type: OS::Cinder::Volume
@@ -167,4 +172,4 @@ resources:
 outputs:
   network:
     description: ip address of vm
-    value: { get_attr: [ lamp_server, networks ] }
+    value: { get_attr: [ server, networks ] }
