--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -104,6 +104,7 @@ resources:
       user_data: |
         #!/bin/bash -v
         sudo hostname localhost
+        echo "sudo hostnamectl set-hostname localhost" >> ~/.profile
         sudo -i
         export http_proxy=http://10.144.106.132:8678
         export https_proxy=http://10.144.106.132:8678
