--- a/lamp.yaml
+++ b/lamp.yaml
@@ -39,6 +39,11 @@ parameters:
   volumeName:
     type: string
     description: name of the bootable volume
+    
+  serverName:
+    type: string
+    description: name of the instance
+    
   volumeSize:
     type: number
     default: 10
@@ -101,6 +106,7 @@ resources:
   server:
     type: OS::Nova::Server
     properties:
+      name: { get_param: serverName }
       availability_zone: { get_param: vmAvailabilityZone }
       key_name: { get_param: key }
       flavor: { get_param: flavor}
