--- a/none.yaml
+++ b/none.yaml
@@ -120,6 +120,8 @@ resources:
             sudo -i
             export http_proxy=$proxy
             export https_proxy=$proxy
+            echo "export http_proxy=$proxy" >> /etc/profile.d/proxy.sh
+            echo "export https_proxy=$proxy" >> /etc/profile.d/proxy.sh
             echo  > /etc/apt/sources.list
             cat >/etc/apt/sources.list <<EOL
             ###### Ubuntu Main Repos
